<resources>
    <string name="app_name">GuessTheCeleb</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="celeb_image">Celeb Image</string>
    <string name="options">Options:</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="selection_option_label">Selection Option:</string>
</resources>
